Issue #24791: Fix grammar regression for call syntax: 'g(*a or b)'.